--- a/api/Gemfile
+++ b/api/Gemfile
@@ -4,4 +4,9 @@ source 'https://rubygems.org'
 gem 'sinatra'
 gem 'kaminari', require: 'kaminari/sinatra'
 gem 'activerecord'
+gem 'sinatra-activerecord'
+gem 'rake'
 gem 'sqlite3'
+gem 'whenever', require: false
+gem 'nokogiri'
+gem 'mechanize'
